main.css
body {
  display: flex;
  /* stack children vertically */
  flex-direction: column;
  min-width: 375px;
}

header {
  /* fix header height */
  flex: 0 80px;
}

main {
  /* main takes remaining vertical space */
  flex: 1 calc(100vh - 110px);
  /* organize content vertically and center horizontally*/
  display: flex;
  flex-direction: column;
  align-items: center;
  /* distribute content with equal spacing */
  justify-content: space-around;
}

footer {
  /* fix footer height */
  flex: 0 30px;
}

menu {
  /* fill available space in header */
  flex: 1;
  display: flex;
  /*  overwrite Bootstrap so the menu does not wrap */
  flex-direction: row !important;
  list-style: none;
}

.navbar-brand {
  /* padding and border for logo */
  padding-left: 0.3em;
  border-bottom: solid rgb(182, 182, 182) thin;
}

menu .nav-item {
  /* horizontal padding between menu items */
  padding: 0 0.3em;
}

footer a {
  /* right-align github link */
  float: right;
}

.about-text {
  max-width: 870px;
  margin: 0 1em;
  text-align: left;
}

/* hide header and footer at smaller screen sizes */
@media (max-height: 600px) {
  header {
    display: none;
  }
  footer {
    display: none;
  }
  main {
    flex: 1 100vh;
  }
}

